--- a/Fakebook/Views/Home/Index.cshtml
+++ b/Fakebook/Views/Home/Index.cshtml
@@ -2,7 +2,44 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@model List<TimelinePost>
+
+<style type="text/css">
+    .rounded-0 {
+        border-style: solid;
+        border-color: blue;
+    }
+</style>
+
+<div class="row">
+    <div class="text-center">
+        <h1 class="display-4">@User.Identity.Name</h1>
+        <img src="https://robohash.org/+ @User.Identity.Name + " class="rounded-0" />
+    </div>
+    <!-- Timeline Entries Column -->
+    <div class="col-md-8">
+        <h1 class="my-4">Timeline Posts</h1>
+        <form method="post">
+            <textarea type="text" name="Description" class="form-control" placeholder="New Post"></textarea><br />
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Add Post</button>
+        </form>
+        <br /><br />
+        <!-- Timeline Post -->
+        @foreach (var post in Model)
+        {
+            <div class="card mb-4">
+                <div class="card-body">
+                    <p class="card-text">@post.Description</p>
+                </div>
+                <div class="card-footer text-muted">Posted on @post.DatePosted by @post.PosterName</div>
+                @foreach (var reply in post.Replies)
+                {
+                    <div class="card-body">
+                        <p class="card-text">@reply.Description</p>
+                    </div>
+                    <div class="card-footer text-muted">Posted on @reply.DatePosted by @reply.PosterName</div>
+                }
+            </div>
+        }
+    </div>
 </div>
