Added View User and Adding timepost. need to add replies to timeposts

--- a/Fakebook/Views/Shared/_Layout.cshtml
+++ b/Fakebook/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                                 <a class="nav-link text-dark" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="Search/">Search</a>
+                                <a class="nav-link text-dark" asp-controller="Search" asp-action="Index">Search</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Logout</a>
