--- a/Fakebook/Views/User/ViewUser.cshtml
+++ b/Fakebook/Views/User/ViewUser.cshtml
@@ -1,9 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-
+﻿@model Person
+@{
+    ViewData["Title"] = "Search Page";
 }
-
-@model List<TimelinePost>
 
 <style type="text/css">
     .rounded-0 {
@@ -14,19 +12,21 @@
 
 <div class="row">
     <div class="text-center">
-        <h1 class="display-4">@User.Identity.Name</h1>
-        <img src="https://robohash.org/ + @User.Identity.Name + " class="rounded-0" />
+        <h1 class="display-4">@Model.Name</h1>
+        <img src="https://robohash.org/ + @Model.Name + " class="rounded-0" />
     </div>
     <!-- Timeline Entries Column -->
     <div class="col-md-8">
         <h1 class="my-4">Timeline Posts</h1>
-        <form method="post">
+        <form method="post" asp-controller="User" asp-action="AddTimelinePost">
+            <input type="text" name="n" value=@Model.Name hidden/>
+            <input type="text" name="PersonId" value=@Model.PersonId hidden/>
             <textarea type="text" name="Description" class="form-control" placeholder="New Post"></textarea><br />
             <button class="btn btn-lg btn-primary btn-block" type="submit">Add Post</button>
         </form>
         <br /><br />
         <!-- Timeline Post -->
-        @foreach (var post in Model)
+        @foreach (var post in Model.TimelinePosts)
         {
             <div class="card mb-4">
                 <div class="card-body">
